git authors added

--- a/index.html
+++ b/index.html
@@ -1512,9 +1512,19 @@
                         <br>HKUST</p>
             </div>
             <div class="large-1 columns">
+                <a href="https://www.linkedin.com/in/jianfengwang1"><img src="./static/eccv2022/img/jianfeng_wang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Jianfeng Wang
+                        <br>Microsoft</p>                
             </div>
               
             <div class="large-1 columns">
+                <a href="https://www.microsoft.com/en-us/research/people/lijuanw/"><img src="./static/eccv2022/img/lijuan_wang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Lijuan Wang
+                        <br>Microsoft</p>                
             </div>
 
             <div class="large-1 columns">
