--- a/index.html
+++ b/index.html
@@ -1526,6 +1526,22 @@
                     <p style="font-size:12px; font-weight: 200;">Lijuan Wang
                         <br>Microsoft</p>                
             </div>
+            
+            <div class="large-1 columns">
+                <a href="https://scholar.google.com/citations?user=kDzxOzUAAAAJ&hl=en"><img src="./static/eccv2022/img/xuehai_he.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Xuehai He
+                        <br>UCSC</p>                
+            </div>
+            
+            <div class="large-1 columns">
+                <a href="https://eric-xw.github.io/"><img src="./static/eccv2022/img/xin_wang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Xin Wang
+                        <br>UCSC</p>                
+            </div>
 
             <div class="large-1 columns">
             </div>
