--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@
             </div>
             
             <div class="large-1 columns">
-                <a href="https://scholar.google.com/citations?user=kDzxOzUAAAAJ&hl=en"><img src="./static/eccv2022/img/xuehai_he.jpg" class="home_team_picture style=" width="75" height="75" ;>
+                <a href="https://scholar.google.com/citations?user=kDzxOzUAAAAJ&hl=en"><img src="./static/eccv2022/img/xuehai_he.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
                     <p style="font-size:12px; font-weight: 200;">Xuehai He
