--- a/index.html
+++ b/index.html
@@ -1539,7 +1539,7 @@
                 <a href="https://eric-xw.github.io/"><img src="./static/eccv2022/img/xin_wang.jpeg" class="home_team_picture style=" width="75" height="75" ;>
                         <br><br>
                     </a>
-                    <p style="font-size:12px; font-weight: 200;">Xin Wang
+                    <p style="font-size:12px; font-weight: 200;">Xin Eric Wang
                         <br>UCSC</p>                
             </div>
 
