program added tentatively

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         </div>
 
         <div class="row" id="program">
-            <h1 style="font-size:30px; color:grey; font-weight: 200">Program (TBD)</h1>
+            <h1 style="font-size:30px; color:grey; font-weight: 200">Program</h1>
             <!-- <br> -->
             <!-- <br>
             <br> -->
@@ -770,7 +770,7 @@
             <!-- <br>
             <br> -->
 
-            <h2 style="font-size:25px; color:red; font-weight: 200"><b>Prerecorded</b></h2>
+            <!-- <h2 style="font-size:25px; color:red; font-weight: 200"><b>Prerecorded</b></h2> -->
             <div id="content-2">
                 <div class="schedule">
                     <table width="100%">
@@ -949,7 +949,7 @@
                                 <center><img src="./static/eccv2022/img/speakers/yin_cui.jpeg"></center>
                             </td>
                             <td style="padding-left:8px">
-                                <b>Invited Talk (Recorded)</b>
+                                <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
                                 <br>Yin Cui (Google)
