program added tentatively

--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                                 <center><img src="https://www.microsoft.com/en-us/research/uploads/prod/2020/09/20191101_170350330_iOS-4.jpg"></center>
                             </td>
                             <td style="padding-left:8px"><b>Welcome</b>
-                              <br>Jianfeng Gao - Microsoft Research
+                                <a href="https://www.microsoft.com/en-us/research/people/jfgao/"><br>Jianfeng Gao - Microsoft Research</a>
                               <!-- <br><a target="_blank" href="https://youtu.be/boO0dc1zmQY">[Video]</a> -->
                               <!-- <a target="_blank" href="https://drive.google.com/file/d/11mPWEu8fwWMdPeBME3OarcQe2f2TjIxK/view?usp=sharing">[Slides]</a> -->
                             </td>
@@ -799,7 +799,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Xiaolong Wnag (UC San Diego)
+                                <a href="https://xiaolonw.github.io/"><br>Xiaolong Wang (UC San Diego)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/SNwSukCtPM0">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/14Vg_zny0Qz2oQjk58WwN6QLBD5sybYd2/view?usp=sharing">[Slides]</a> -->
@@ -816,7 +816,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Neil Houlsby (Google)
+                                <a href="https://neilhoulsby.github.io/"><br>Neil Houlsby (Google)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/-iF4gkcdBx0">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1SXK223NUXGz-Ayp2mzcBY9mS4W1-snLT/view?usp=sharing">[Slides]</a> -->
@@ -833,7 +833,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Lucas Beyer (Google)
+                                <a href="http://lucasb.eyer.be/"><br>Lucas Beyer (Google)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
@@ -850,7 +850,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Xiaohua Zhai (Google)
+                                <a href="https://sites.google.com/view/xzhai"><br>Xiaohua Zhai (Google)</a> 
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/zCmzV2QXwMY">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1VyOlRsGJNYSNfBnDJE8LSnFyuJNWmyfV/view?usp=sharing">[Slides]</a> -->
@@ -884,7 +884,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Yongqin Xian (Google)
+                                <a href="https://xianyongqin.github.io/"><br>Yongqin Xian (Google)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
@@ -901,7 +901,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Ishan Misra (Meta)
+                                <a href="https://imisra.github.io/"><br>Ishan Misra (Meta)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
@@ -935,7 +935,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Kate Saenko (Boston University)
+                                <a href="http://ai.bu.edu/ksaenko.html"><br>Kate Saenko (Boston University)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
@@ -952,7 +952,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Yin Cui (Google)
+                                <a href="https://ycui.me/"><br>Yin Cui (Google)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
@@ -969,7 +969,7 @@
                                 <b>Invited Talk</b>
                                 <br>
                                 <b>Title: TBD</b>
-                                <br>Stella Yu (UC Berkley)
+                                <a href="https://www1.icsi.berkeley.edu/~stellayu/"><br>Stella Yu (UC Berkley)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
