program added tentatively

--- a/index.html
+++ b/index.html
@@ -815,28 +815,11 @@
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
                                 <br>
-                                <b>Title: TBD</b>
+                                <b>Title: Architectures Beyond CNNs and Visual Scaling Laws</b>
                                 <a href="https://neilhoulsby.github.io/"><br>Neil Houlsby (Google)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/-iF4gkcdBx0">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1SXK223NUXGz-Ayp2mzcBY9mS4W1-snLT/view?usp=sharing">[Slides]</a> -->
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width=250>
-                                <center> <b>10:15 AM - 10:45 AM IDT</b> <br><br>(12:15 AM - 12:45 AM PT)</center> 
-                            </td>
-                            <td width=500>
-                                <center><img src="./static/eccv2022/img/speakers/lucas.jpeg"></center>
-                            </td>
-                            <td style="padding-left:8px">
-                                <b>Invited Talk</b>
-                                <br>
-                                <b>Title: TBD</b>
-                                <a href="http://lucasb.eyer.be/"><br>Lucas Beyer (Google)</a>
-                                <br>
-                                <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
-                                <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
                             </td>
                         </tr>
                         <tr>
@@ -849,11 +832,28 @@
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
                                 <br>
-                                <b>Title: TBD</b>
+                                <b>Title:  Scaling Vision and Language Learning with Vision Transformers</b>
                                 <a href="https://sites.google.com/view/xzhai"><br>Xiaohua Zhai (Google)</a> 
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/zCmzV2QXwMY">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1VyOlRsGJNYSNfBnDJE8LSnFyuJNWmyfV/view?usp=sharing">[Slides]</a> -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width=250>
+                                <center> <b>10:15 AM - 10:45 AM IDT</b> <br><br>(12:15 AM - 12:45 AM PT)</center> 
+                            </td>
+                            <td width=500>
+                                <center><img src="./static/eccv2022/img/speakers/matthias_minderer.png"></center>
+                            </td>
+                            <td style="padding-left:8px">
+                                <b>Invited Talk</b>
+                                <br>
+                                <b>Title: Beyond image-level tasks: Scalable approaches to localization and dense prediction</b>
+                                <a href="http://matthias.minderer.net/"><br>Matthias Minderer (Google)</a>
+                                <br>
+                                <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
+                                <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
                             </td>
                         </tr>
                         <tr>
@@ -868,6 +868,24 @@
                                 <br>
                                 <b>Title: </b>
                                 <br>Speaker: TBD
+                                <br>
+                                <!-- <a target="_blank" href="https://youtu.be/dyHlSU7HSN8">[Video]</a> -->
+                                <!-- <a target="_blank" href="https://drive.google.com/file/d/1QhRQVkqIuGgvtfP61MssHZsM5xXYXs2P/view?usp=sharing">[Slides]</a> -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width=250>
+                                <center> <b>12 PM - 1 PM IDT</b> <br><br>(2 AM - 3 AM PT)</center> 
+                            </td>
+                            <td width=500>
+                                
+                                <center> <h1 style="font-size:16px; color:#ffa200; font-weight: 500">Lunch Break (Buffer Time)</h1> <b></b></center>
+                            </td>
+                            <td style="padding-left:8px">
+                                <!-- <b>Challenge/Workshop Presentation</b> -->
+                                <br>
+                                <!-- <b>Title: </b> -->
+                                <!-- <br>Speaker: TBD -->
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/dyHlSU7HSN8">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1QhRQVkqIuGgvtfP61MssHZsM5xXYXs2P/view?usp=sharing">[Slides]</a> -->
@@ -922,6 +940,24 @@
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width=250>
+                                <center> <b>3 PM - 4:30 PM IDT</b> <br><br>(5 AM - 6:30 AM PT)</center> 
+                            </td>
+                            <td width=500>
+                                
+                                <center> <h1 style="font-size:16px; color:#ffa200; font-weight: 500">Afternoon Break (Buffer Time)</h1> <b></b></center>
+                            </td>
+                            <td style="padding-left:8px">
+                                <!-- <b>Challenge/Workshop Presentation</b> -->
+                                <br>
+                                <!-- <b>Title: </b> -->
+                                <!-- <br>Speaker: TBD -->
+                                <br>
+                                <!-- <a target="_blank" href="https://youtu.be/dyHlSU7HSN8">[Video]</a> -->
+                                <!-- <a target="_blank" href="https://drive.google.com/file/d/1QhRQVkqIuGgvtfP61MssHZsM5xXYXs2P/view?usp=sharing">[Slides]</a> -->
                             </td>
                         </tr>
                         <tr>
