--- a/index.html
+++ b/index.html
@@ -506,10 +506,10 @@
                         </div>
             
                          <div class="large-2 columns">
-                            <a href="http://lucasb.eyer.be/"><img src="./static/eccv2022/img/speakers/lucas.jpeg"  class="speaker_picture" style="width:150px; height:150px;">
+                            <a href="http://matthias.minderer.net/"><img src="./static/eccv2022/img/speakers/matthias_minderer.png"  class="speaker_picture" style="width:150px; height:150px;">
                                 <br><br>
                             </a>
-                            <p style="font-size:12px; font-weight: 200;">Lucas Beyer
+                            <p style="font-size:12px; font-weight: 200;">Matthias Minderer
                                 <br>Google</p>
                         </div> 
      
