Stella's talk title added

--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
                                 <br>
-                                <b>Title: TBD</b>
+                                <b>Title: Learning Mid-Level Vision from Nothing but Data</b>
                                 <a href="https://www1.icsi.berkeley.edu/~stellayu/"><br>Stella Yu (UC Berkley)</a>
                                 <br>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
